# tfg-ms-foo2-api-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: create-gh-tag-release.yml
mysite/: settings.py  urls.py  views.py
